# realworld

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
docker/: README.md  docker-compose.yml
infra/: README.md
infra/policy/: terraform-user-policy.json
infra/setup/: setup-terraform.sh  terraform-user-policy.json
infra/tf/: bastion.tf  rds.tf  security_groups.tf
migrations/: 20250118000001_create_users_table.down.sql  20250118000001_create_users_table.up.sql  20250118000002_create_articles_table.up.sql  20250118000003_create_tags_table.up.sql  20250118000004_create_article_tags_table.up.sql  20250118000005_create_comments_table.up.sql  20250118000006_create_user_follows_table.up.sql  20250118000007_create_article_favorites_table.up.sql
src/: app_config.rs  app_error.rs  database.rs  main.rs  server.rs  tracing.rs
src/domain/: article_service.rs  user_repository.rs  user_service.rs
src/domain/commands/: update_article_command.rs
src/http/: mod.rs
src/http/dto/: article.rs  login.rs  profile.rs  register.rs  user.rs
src/http/extractors/: auth_token.rs
src/http/routes/: articles.rs  auth.rs  comments.rs  profiles.rs  users.rs
src/model/: indexed_article_field.rs  indexed_user_field.rs
src/model/persistence/: article.rs  (+2 more)
src/persistence/: article_repository.rs  comment_repository.rs  mod.rs  profile_repository.rs  schema.rs  tag_repository.rs  user_repository.rs
tests/: article_tests.rs  comment_tests.rs  profile_tests.rs  tag_tests.rs  user_tests.rs
tests/common/: mod.rs
(+10 files in other folders)
