[package]
name = "realworld"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tryphon = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
thiserror = "2.0"
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
async-trait = "0.1"
